--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://sarthakagarwal882.github.io/FilmyRadar",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
