--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://sarthakagarwal882.github.io/FilmyRadar",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "pre-deploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
