--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://sarthakagarwal882.github.io/FilmyRadar",
   "type": "module",
   "scripts": {
-    "pre-deploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
